<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="credentials">Credentials</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_my_tesla_credentials">Please enter your MY TESLA credentials.</string>
    <string name="invalid_credentials">Invalid credentials, please try again.</string>
    <string name="invalid_vehicle">Invalid vehicle ID?</string>
    <string name="homelink">Homelink</string>
    <string name="homelink_activated">Homelink activated.</string>
    <string name="auto_reverse">Auto\nreverse</string>
    <string name="auto_forward">Auto\nforward</string>
    <string name="unlock_car">Unlock\ncar</string>
    <string name="unlock_charger">Unlock\ncharger</string>
    <string name="autoparking">Autoparking.</string>
    <string name="autopark_aborted">Autopark aborted.</string>
    <string name="car_unlocked">Car unlocked.</string>
    <string name="ac">A/C</string>
    <string name="on">On</string>
    <string name="charging_port_unlocked">Charging port unlocked.</string>
    <string name="temp_set">Temperature set.</string>
    <string name="ac_on">A/C on.</string>
    <string name="ac_off">A/C off.</string>
</resources>
