<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vehicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cx.ath.troja.teslambast.VehicleActivity">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connected"
        android:checked="true"
        android:clickable="false"
        android:layout_alignBaseline="@+id/homelink"
        android:layout_alignBottom="@+id/homelink"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/auto_forward"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homelink"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/autoForward" />

    <Button
        android:text="@string/auto_reverse"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoReverse"
        android:layout_below="@+id/homelink"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/homelink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homelink"
        android:enabled="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/unlock_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/autoReverse"
        android:layout_alignEnd="@+id/autoReverse"
        android:id="@+id/unlockCar" />

    <Button
        android:text="@string/unlock_charger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/unlockCar"
        android:layout_alignLeft="@+id/homelink"
        android:layout_alignStart="@+id/homelink"
        android:id="@+id/unlockCharger" />
</RelativeLayout>
